<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ytu_portre_mobil"
    tools:context=".Login">

    <!-- Semi-transparent overlay -->
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.25"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- LinearLayout for logo and title -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical"
        android:padding="28dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="326dp"
            android:layout_height="182dp"
            android:src="@drawable/ytu" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="Çevrimiçi Eğitim Platformu"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- Email EditText -->
    <EditText
        android:id="@+id/e_mail_adress"
        style="@style/Widget.Material3.TextInputEditText.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:alpha="0.6"
        android:background="@drawable/edittext_shape"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.75" />

    <!-- Password EditText -->
    <EditText
        android:id="@+id/password"
        style="@style/Widget.Material3.TextInputEditText.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:alpha="0.6"
        android:background="@drawable/edittext_shape"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/e_mail_adress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.75" />

    <!-- Login Button -->
    <Button
        android:id="@+id/login_button"
        android:layout_width="222dp"
        android:layout_height="63dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:text="Giriş Yap"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/chance_password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/chance_password_textView"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <TextView
        android:id="@+id/register_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/register_textView"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chance_password_text_view" />

    <Button
        android:id="@+id/change_password_button"
        android:layout_width="222dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:text="Şifreyi Sıfırla"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_mail_adress" />

    <TextView
        android:id="@+id/go_to_login_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/go_to_login_textView"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_password_button" />


</androidx.constraintlayout.widget.ConstraintLayout>
